# procure

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/git/.procure/: __init__.py
examples/zip/.procure/: __init__.py
procure/: __init__.py  project.py  resource.py  solution.py
procure/cli/: __init__.py
procure/solution/: __init__.py  git.py  solution.py  zip.py
